
Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------

* FIX: The CreateProcessAsuserA hook failed...
* LANG_PORTUGUESE

SuRun 1.2.1.0 Beta 9 - 2011-07-06
---------------------------------
* NEW: User SYSTEM is supported for /RUNAS, but only when used by a non
       restricted SuRunner or by a real Administrator

SuRun 1.2.1.0 Beta 8 - 2011-06-24
---------------------------------
* NEW: /USER <name> command line parameter for specifying the RunAs user
* NEW: /LOW command line parameter for launching non elevated processes
* FIX: "runas" was not handled by ShellExecuteHook of last beta

SuRun 1.2.1.0 Beta 7 - 2011-06-02
---------------------------------
* NEW: French resources by Laurent Hilsz. Thanks!
* FIX: Updating SuRun with a different locale failed.
       An English SuRun could not be updated by a French SuRun because the 
       SuRun service name was localized.
* NEW: Removed dependencies on wtsapi32.h and wtsapi32.lib
* NEW: added bin\Crypt32x64.Lib and bin\Crypt32x86.Lib because Crypt32.Lib is 
       missing in VS2005.

SuRun 1.2.1.0 Beta 6 - 2011-05-03
---------------------------------
* NEW: partly French resources by Laurent Hilsz. Thanks!
* FIX: "(Re-)Start as Administrator" did not work with captionless Windows
* FIX: IAT-Hook prevented SwitchDesktop in AVAST and caused a system deadlock

SuRun 1.2.1.0 Beta 5 - 2011-03-18
---------------------------------
* FIX: Install Hardware automatically as administrator did not work in all 
    1.2.1.0 Betas.

SuRun 1.2.1.0 Beta 4 - 2011-02-24
---------------------------------
* NEW: InstallSurun and SuRun set DEP permanently ON